# example_c

./: .gitignore  CMakeLists.txt  README.md
cmake_ex01/: CMakeLists.txt  README.md
cmake_ex01/include/: target.h
cmake_ex01/src/: CMakeLists.txt  main.cpp  target.c
cmake_modules/: debug_print_values.cmake  gcovr.cmake
custom_build_01/: CMakeLists.txt
custom_build_01/src/: CMakeLists.txt
gmock_ex01/: CMakeLists.txt  README.md
gmock_ex01/include/: Foo.h  IBar.h
gmock_ex01/src/: Bar.cpp  Bar.h  CMakeLists.txt  Foo.cpp
gmock_ex01/tests/: BarMock.h  CMakeLists.txt  FakeBar.h  TestFoo.cpp
hello_CppUMock/: CMakeLists.txt
hello_CppUMock/include/: target.h
hello_CppUMock/tests/: test_target.cpp
hello_CppUMock01/: README.md
hello_CppUMock01/src/: target.cpp
hello_CppUMock01/tests/: CMakeLists.txt  test_target.cpp
hello_CppUMock02/: CMakeLists.txt  README.md
hello_CppUMock02/src/: target.cpp
hello_CppUMock02/tests/: CMakeLists.txt  statvfs-mock.c  test_target.cpp
hello_CppUTest01/: README.md
hello_CppUTest01/include/: calculator.h  concrete_calculator.h  target.h
hello_CppUTest01/src/: CMakeLists.txt  target.cpp
hello_CppUTest01/tests/: CMakeLists.txt  calculator-mock.h  concrete_calculator.cpp  test_target.cpp
hello_cmake_exe/: .cproject  .project  CMakeLists.txt
hello_cmake_exe/src/: main.c
hello_cmake_so/: .cproject  .project  CMakeLists.txt
hello_gcovr/: CMakeLists.txt
hello_gcovr/include/: target.h
hello_gcovr/src/: target.cpp
hello_gcovr/tests/: CMakeLists.txt  test_target.cpp
hello_googletest01/include/: target.h
hello_googletest01/src/: target.cpp
hello_googletest01/tests/: CMakeLists.txt  test_target.cpp
hello_googletest02/: CMakeLists.txt
hello_googletest02/include/: calculator.h  target.h
hello_googletest02/src/: CMakeLists.txt  target.cpp
hello_googletest02/tests/: CMakeLists.txt  calculator-mock.h  test_target.cpp
hello_googletest03/: CMakeLists.txt
hello_googletest03/include/: bcm2835.h  target.h
hello_googletest03/src/: target.cpp
hello_googletest03/tests/: CMakeLists.txt  bcm2835-mock.h  test_target.cpp
