cmake_minimum_required(VERSION 3.12)

add_subdirectory(gmock_ex01)
# add_subdirectory(hello_CppUTest01)
# add_subdirectory(hello_googletest01)
# add_subdirectory(hello_googletest02)
# add_subdirectory(hello_googletest03)
# add_subdirectory(hello_gcovr)
# add_subdirectory(hello_CppUMock02)
# add_subdirectory(hello_CppUMock01)
# add_subdirectory(cmake_ex01)
